--- a/main.html
+++ b/main.html
@@ -8,6 +8,48 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+		  <tr>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		  </tr>
+		</thead>
+		<tbody>
+		  <tr>
+			<td>1</td>
+			<td>Sam</td>
+		  </tr>
+		  <tr>
+			<td>2</td>
+			<td>Ram</td>
+		  </tr>
+		  <tr>
+			<td>3</td>
+			<td>Cam</td>
+		  </tr>
+		</tbody>
+	  </table> 
+	  
+	  <h1>List of medias</h1>
+	  
+	  <ol type="1">
+		<li>
+		  <img src="https://picsum.photos/id/123/200/300" alt="picsum">
+		</li> 
+		
+		<li>
+		  <video width="320" height="240" controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		  </video>
+		</li>
+		
+		<li>
+		  <audio controls>
+			<source src="http://commondatastorage.googleapis. com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+		  </audio>
+		</li>
+	  </ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
