src inide media tags

--- a/main.html
+++ b/main.html
@@ -39,13 +39,13 @@
 		</li> 
 		
 		<li>
-		  <video width="320" height="240" controls>
+		  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" width="320" height="240" controls>
 			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
 		  </video>
 		</li>
 		
 		<li>
-		  <audio controls>
+		  <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>
 			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
 		  </audio>
 		</li>
